--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+// package.json (Corrected)
 {
   "name": "vite_react_shadcn_ts",
   "private": true,
@@ -42,7 +43,6 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.45.0",
     "@tanstack/react-query": "^5.56.2",
     "class-variance-authority": "^0.7.1",
